[package]
name = "fcm"
version = "0.9.1"
authors = [
  "Suvish Varghese Thoovamalayil <vishy1618@gmail.com>",
  "panicbit <panicbit.dev@gmail.com>",
  "Julius de Bruijn <pimeys@gmail.com>"]
description = "An API to talk to FCM (Firebase Cloud Messaging) in Rust"
license = "MIT"
homepage = "https://github.com/panicbit/fcm-rust"
repository = "https://github.com/panicbit/fcm-rust"
documentation = "https://docs.rs/fcm/"
keywords = ["fcm", "firebase", "notification"]
edition = "2018"

[features]
default = ["native-tls"]
native-tls = ["hyper-tls"]
rustls = ["hyper-rustls"]
vendored-tls = ["hyper-tls/vendored"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
erased-serde = "0.3"
chrono = "0.4"
log = "0.4"
hyper = { version = "0.14", features = ["client", "http1"] }
hyper-tls = { version = "0.5", optional = true }
hyper-rustls = { version = "0.22", optional = true }
http = "0.2"

[dev-dependencies]
argparse = "0.2"
tokio = { version = "1.6", features = ["rt-multi-thread", "macros"] }
pretty_env_logger = "0.4"
